migracao para o Java 8 e ajustes para utilizar a lib pdfbox para funcionar corretamente na impressora